syntax = "proto3";

option go_package = "/;grpc";

package grpc;

service Broadcast {
    rpc ChatStream(Empty) returns (stream MessageResponse){}
    rpc SendMessage(MessageResponse) returns (Empty){}
    rpc ActiveUsers(ActiveUsersRequest) returns (ActiveUsersList) {}
  }
  message Empty {}
  
  message ActiveUsersList {
    repeated User users = 1;
  }

  message ActiveUsersRequest {}

  message User {
    string name = 1;
    MessageResponse message = 2;
  }

  message MessageResponse {
    string name = 1;
    string message = 2;
    string timestamp = 3;
  }


  
